update seed && start

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# NODE_ENV = 'development';
+# # NODE_ENV = 'development';
 
-# Internal DB
-DATABASE_URL = postgres://dal_recipe_user:A8X6shIQEaJUJ2JjwW8QLhwhgJK7FkXG@dpg-cf058602i3mmhme49rc0-a.ohio-postgres.render.com/dal_recipe
-# External DB
+# # Internal DB
+# DATABASE_URL = postgres://dal_recipe_user:A8X6shIQEaJUJ2JjwW8QLhwhgJK7FkXG@dpg-cf058602i3mmhme49rc0-a.ohio-postgres.render.com/dal_recipe
+# # External DB
