--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "seed:dev": "nodemon ./db/seed.js",
     "start": "node index.js",
     "start:dev": "nodemon index.js",
-    "start-seed": "node db/seed.js && node index.js"
+    "start-seed": "node db/seed.js && node index.js",
+    "seed-and-start": "nodemon ./db/seed/js && node index.js" 
   },
   "repository": {
     "type": "git",
