update final, should run seed

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "nodemon ./db/seed/js",
+    "seed": "nodemon ./db/seed.js",
     "seed:dev": "nodemon ./db/seed.js",
     "start": "node index.js",
     "start:dev": "nodemon index.js",
     "start-seed": "node db/seed.js && node index.js",
-    "seed-and-start": "nodemon ./db/seed/js && node index.js" 
+    "seed-and-start": "nodemon ./db/seed.js && node index.js" 
   },
   "repository": {
     "type": "git",
