--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node index.js",
     "start:dev": "nodemon index.js",
     "start-seed": "node db/seed.js && node index.js",
-    "seed-and-start": "nodemon ./db/seed.js && node index.js" 
+    "seed-and-start": "node ./db/seed.js && node index.js" 
   },
   "repository": {
     "type": "git",
